--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -18,6 +20,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oidc": "^0.1.0"
   },
