--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
