--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,11 +1,9 @@
 {
-  "files": [],
-  "references": [
-  ],
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["*"]
     }
-  }
+  },
+  "include": ["src"]
 }
