--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
+    "cftracker-root": "file:..",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -56,6 +57,6 @@
     "postcss": "^8.5.5",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
-    "vite": "^6.3.5"
+    "vite": "^5.2.0"
   }
 }
