--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-table": "^8.21.3",
+    "@vitejs/plugin-react": "^4.6.0",
     "axios": "^1.10.0",
     "cftracker-root": "file:..",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "cmdk": "^1.1.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.515.0",
+    "postcss": "^8.5.5",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
@@ -40,6 +42,9 @@
     "react-router-dom": "^7.6.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
+    "vite": "^5.2.0",
     "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
@@ -48,15 +53,9 @@
     "@types/node": "^24.0.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.10",
-    "tw-animate-css": "^1.3.4",
-    "vite": "^5.2.0"
+    "globals": "^16.0.0"
   }
 }
