--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
         "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
         "start": "node backend/src/index.js"
     },
-    "type": "module"
+    "type": "module",
+    "devDependencies": {
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.11"
+    }
 }
