--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,8 @@
     "tw-animate-css": "^1.3.4",
     "vite": "^5.2.0",
     "zod": "^3.25.67",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "rollup": "^4.44.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
