--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,6 @@
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-table": "^8.21.3",
     "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "cftracker-root": "file:..",
     "class-variance-authority": "^0.7.1",
@@ -41,20 +40,22 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "rollup": "^4.44.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "vite": "^5.2.0",
     "zod": "^3.25.67",
-    "zustand": "^5.0.5",
-    "rollup": "^4.44.1"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.0.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
