--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "cftracker-root",
-    "private": true,
-    "scripts": {
-        "dev": "nodemon backend/src/index.js",
-        "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-        "start": "node backend/src/index.js"
-    },
-    "type": "module",
-    "devDependencies": {
-        "autoprefixer": "^10.4.21",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.11"
-    }
+  "name": "cftracker-root",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon backend/src/index.js",
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "node backend/src/index.js"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
+  }
 }
