--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nodemon backend/src/index.js",
+    "dev": "node backend/src/index.js",
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "node backend/src/index.js"
-  },
-  "dependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
   }
 }
