--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,14 +41,12 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67",
-    "zustand": "^5.0.5"
-  },
-  "devDependencies": {
+    "zustand": "^5.0.5",
     "@eslint/js": "^9.25.0",
     "@types/node": "^24.0.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -58,5 +56,7 @@
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "vite": "^6.3.5"
+  },
+  "devDependencies": {
   }
 }
